# tetris-study-league-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Release.yml
src/tetris_study_league_tools/: __init__.py  avatar.py  browser.py  constant.py  exception.py  log.py  request.py  retry.py
src/tetris_study_league_tools/api/schemas/: user.py
src/tetris_study_league_tools/api/schemas/summaries/: league.py
src/tsl_tools/: __init__.py
src/tsl_tools/api/: cache.py  player.py  typing.py
src/tsl_tools/api/schemas/: user_info.py
src/tsl_tools/api/schemas/summaries/: __init__.py  solo.py
